--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -8036,11 +8036,37 @@ button.close {
     vertical-align: top;
 }
 
-.dashboard-container button {
+.dashboard-container__list {
+    border: 1px solid #ccc;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.dashboard-container__header {
+    margin-bottom: 5px;
+    box-sizing: border-box;
+}
+
+.dashboard-container__header > button {
     border: 0;
     background: #000;
     color: #fff;
     padding: 4px 10px;
+}
+
+.dashboard-container__subtitle {
+    font-size: 12px;
+    color: #00aeef;
+    font-weight: 600;
+    margin: 5px 0 10px;
+}
+
+.dashboard-container .spinner {
+    display: none;
+}
+
+.dashboard-container--in-waiting .spinner {
+    display: inline-block;
 }
 
 .footer.red a {
@@ -8114,4 +8140,67 @@ button.close {
     top: -10px;
     background: #ddd;
     padding: 2px;
+}
+
+
+/* Waiting animation*/
+
+.spinner {
+    width: 25px;
+    height: 25px;
+    position: relative;
+    margin: 0 10px;
+}
+
+.double-bounce1,
+.double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #333;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+    animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+    0%,
+    100% {
+        -webkit-transform: scale(0.0)
+    }
+    50% {
+        -webkit-transform: scale(1.0)
+    }
+}
+
+@keyframes sk-bounce {
+    0%,
+    100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    }
+    50% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    }
+}
+
+
+/* Utility classes */
+
+.item--is-inline {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.item--has-action {
+    cursor: pointer;
 }
