--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -8159,9 +8159,12 @@ button.close {
 }
 .chat-form-container__users {
     position: absolute;
-    right:0;
-    bottom:0;
+    right: 0;
+    bottom: 0;
     width: 250px;
+    padding: 5px;
+    background: #efefef;
+    border: 1px solid #ccc;
 }
 .chat-form {
     display: inline-block;
